# red_green_machine

./: README.md  agents.py  data.py  prompts.py  pyproject.toml  rgm.py  utilities.py
